--- a/index.html
+++ b/index.html
@@ -5,10 +5,113 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
 
+    <nav id="sidebar">
+
+        <ul>
+            <li>
+                <span class="logo">
+                    Coding2go
+                </span>
+                <button id="toggle-btn">
+
+                </button>
+            </li>
+
+            <li class="active">
+                <a href="index.html">
+                    <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px"
+                        fill="#5f6368">
+                        <path
+                            d="M240-200h120v-240h240v240h120v-360L480-740 240-560v360Zm-80 80v-480l320-240 320 240v480H520v-240h-80v240H160Zm320-350Z" />
+                    </svg>
+                    <span>Home</span>
+                </a>
+            </li>
+            <li>
+                <a href="dashboard.html">
+                    <span>Dashboard</span>
+
+                </a>
+            </li>
+            <li>
+                <button class="dropdown-btn">
+                    <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px"
+                        fill="#5f6368">
+                        <path d="M480-360 280-560h400L480-360Z" />
+                    </svg>
+                    <span>Todo-Lists</span>
+                    <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px"
+                        fill="#5f6368">
+                        <path d="M480-528 296-344l-56-56 240-240 240 240-56 56-184-184Z" />
+                    </svg>
+                </button>
+
+                <ul>
+                    <li>
+                        <a href="#">Work</a>
+                    </li>
+                    <li>    
+                        <a href="#">Private</a>
+                    </li>
+                    <li>
+                        <a href="#">Coding</a>
+                    </li>
+                    <li>
+                        <a href="#">Gardening</a>
+                    </li>
+                    <li>
+                        <a href="#">School</a>
+                    </li>
+                </ul>
+
+            </li>
+            <li>
+                <a href="profile.html">
+                    <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px"
+                        fill="#5f6368">
+                        <path
+                            d="M480-480q-66 0-113-47t-47-113q0-66 47-113t113-47q66 0 113 47t47 113q0 66-47 113t-113 47ZM160-160v-112q0-34 17.5-62.5T224-378q62-31 126-46.5T480-440q66 0 130 15.5T736-378q29 15 46.5 43.5T800-272v112H160Zm80-80h480v-32q0-11-5.5-20T700-306q-54-27-109-40.5T480-360q-56 0-111 13.5T260-306q-9 5-14.5 14t-5.5 20v32Zm240-320q33 0 56.5-23.5T560-640q0-33-23.5-56.5T480-720q-33 0-56.5 23.5T400-640q0 33 23.5 56.5T480-560Zm0-80Zm0 400Z" />
+                    </svg>
+                    <span>Profile</span>
+
+                </a>
+            </li>
+
+        </ul>
+
+    </nav>
+
+    <main>
+        <div class="container">
+            <h2>
+                Hello world
+            </h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolore magnam in nulla, beatae cumque, sit ipsam
+                soluta suscipit fugit enim molestiae fuga quo illo cupiditate sunt architecto labore quae quis.</p>
+
+        </div>
+        <div class="container">
+
+            <h2>
+                Hello world
+            </h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolore magnam in nulla, beatae cumque, sit ipsam
+                soluta suscipit fugit enim molestiae fuga quo illo cupiditate sunt architecto labore quae quis.</p>
+        </div>
+        <div class="container">
+
+            <h2>
+                Hello world
+            </h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolore magnam in nulla, beatae cumque, sit ipsam
+                soluta suscipit fugit enim molestiae fuga quo illo cupiditate sunt architecto labore quae quis.</p>
+        </div>
+    </main>
 
 
 
