--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
                     Coding2go
                 </span>
                 <button id="toggle-btn">
+                    <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="#5f6368"><path d="M560-240 320-480l240-240 56 56-184 184 184 184-56 56Z"/></svg>
 
                 </button>
             </li>
@@ -37,6 +38,32 @@
                     <span>Dashboard</span>
 
                 </a>
+            </li>
+            <li>
+                <button class="dropdown-btn">
+                    <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px"
+                        fill="#5f6368">
+                        <path d="M480-360 280-560h400L480-360Z" />
+                    </svg>
+                    <span>Create</span>
+                    <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px"
+                        fill="#5f6368">
+                        <path d="M480-528 296-344l-56-56 240-240 240 240-56 56-184-184Z" />
+                    </svg>
+                </button>
+                <ul>
+                    <li>
+                        <a href="#">Folder</a>
+                    </li>
+                    <li>    
+                        <a href="#">Document</a>
+                    </li>
+                    <li>
+                        <a href="#">Project</a>
+                    </li>
+                    
+                </ul>
+                
             </li>
             <li>
                 <button class="dropdown-btn">
