--- a/index.html
+++ b/index.html
@@ -18,7 +18,10 @@
                     Coding2go
                 </span>
                 <button id="toggle-btn">
-                    <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="#5f6368"><path d="M560-240 320-480l240-240 56 56-184 184 184 184-56 56Z"/></svg>
+                    <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px"
+                        fill="#5f6368">
+                        <path d="M560-240 320-480l240-240 56 56-184 184 184 184-56 56Z" />
+                    </svg>
 
                 </button>
             </li>
@@ -43,38 +46,40 @@
                 <button class="dropdown-btn">
                     <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px"
                         fill="#5f6368">
-                        <path d="M480-360 280-560h400L480-360Z" />
+                        <path
+                            d="M560-320h80v-80h80v-80h-80v-80h-80v80h-80v80h80v80ZM160-160q-33 0-56.5-23.5T80-240v-480q0-33 23.5-56.5T160-800h240l80 80h320q33 0 56.5 23.5T880-640v400q0 33-23.5 56.5T800-160H160Zm0-80h640v-400H447l-80-80H160v480Zm0 0v-480 480Z" />
                     </svg>
                     <span>Create</span>
                     <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px"
                         fill="#5f6368">
-                        <path d="M480-528 296-344l-56-56 240-240 240 240-56 56-184-184Z" />
+                        <path d="M480-344 240-584l56-56 184 184 184-184 56 56-240 240Z" />
                     </svg>
                 </button>
                 <ul>
                     <li>
                         <a href="#">Folder</a>
                     </li>
-                    <li>    
+                    <li>
                         <a href="#">Document</a>
                     </li>
                     <li>
                         <a href="#">Project</a>
                     </li>
-                    
+
                 </ul>
-                
+
             </li>
             <li>
                 <button class="dropdown-btn">
                     <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px"
                         fill="#5f6368">
-                        <path d="M480-360 280-560h400L480-360Z" />
+                        <path
+                            d="M222-200 80-342l56-56 85 85 170-170 56 57-225 226Zm0-320L80-662l56-56 85 85 170-170 56 57-225 226Zm298 240v-80h360v80H520Zm0-320v-80h360v80H520Z" />
                     </svg>
                     <span>Todo-Lists</span>
                     <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px"
                         fill="#5f6368">
-                        <path d="M480-528 296-344l-56-56 240-240 240 240-56 56-184-184Z" />
+                        <path d="M480-344 240-584l56-56 184 184 184-184 56 56-240 240Z" />
                     </svg>
                 </button>
 
@@ -82,7 +87,7 @@
                     <li>
                         <a href="#">Work</a>
                     </li>
-                    <li>    
+                    <li>
                         <a href="#">Private</a>
                     </li>
                     <li>
