--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                         <path d="M480-344 240-584l56-56 184 184 184-184 56 56-240 240Z" />
                     </svg>
                 </button>
-                <ul>
+                <ul class="sub-menu">
                     <li>
                         <a href="#">Folder</a>
                     </li>
@@ -83,7 +83,7 @@
                     </svg>
                 </button>
 
-                <ul>
+                <ul class="sub-menu">
                     <li>
                         <a href="#">Work</a>
                     </li>
@@ -147,6 +147,7 @@
 
 
 
+    <script src="app.js"></script>
 </body>
 
 </html>
