--- a/index.html
+++ b/index.html
@@ -56,15 +56,17 @@
                     </svg>
                 </button>
                 <ul class="sub-menu">
-                    <li>
-                        <a href="#">Folder</a>
-                    </li>
-                    <li>
-                        <a href="#">Document</a>
-                    </li>
-                    <li>
-                        <a href="#">Project</a>
-                    </li>
+                    <div>
+                        <li>
+                            <a href="#">Folder</a>
+                        </li>
+                        <li>
+                            <a href="#">Document</a>
+                        </li>
+                        <li>
+                            <a href="#">Project</a>
+                        </li>
+                    </div>
 
                 </ul>
 
@@ -84,26 +86,29 @@
                 </button>
 
                 <ul class="sub-menu">
-                    <li>
-                        <a href="#">Work</a>
-                    </li>
-                    <li>
-                        <a href="#">Private</a>
-                    </li>
-                    <li>
-                        <a href="#">Coding</a>
-                    </li>
-                    <li>
-                        <a href="#">Gardening</a>
-                    </li>
-                    <li>
-                        <a href="#">School</a>
-                    </li>
+                    <div>
+                        <li>
+                            <a href="#">Work</a>
+                        </li>
+                        <li>
+                            <a href="#">Private</a>
+                        </li>
+                        <li>
+                            <a href="#">Coding</a>
+                        </li>
+                        <li>
+                            <a href="#">Gardening</a>
+                        </li>
+                        <li>
+                            <a href="#">School</a>
+                        </li>
+                    </div>
+
                 </ul>
 
             </li>
             <li>
-                <a href="profile.html">
+               <a href="profile.html">
                     <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px"
                         fill="#5f6368">
                         <path
